test/pass/ImportRestricted.curry
module ImportRestricted (module ImportRestrictedExport) where

import ImportRestrictedExport (Test(test))
