test/fail/RecursiveImport.curry
module RecursiveImport where

import RecursiveImport
